# ipc-sync

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/ipc_utils/: __init__.py  _base.py  _env.py  _posix.py  _win.py
tests/: test_semaphore.py  test_utils.py
